--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ hr {
     font-weight: 500;
     line-height: normal;
 }
-.number-characters {
+.data {
     text-decoration: none;
     opacity: 0.4;
     color: #000;
