--- a/index.css
+++ b/index.css
@@ -191,8 +191,63 @@ option {
     line-height: normal;
     opacity: 0.4;
 }
+.counter-block {
+    display: flex;
+    align-items:
+    center; gap: 10px;
+}
 @media screen and (max-width: 320px) {
+    section {
+        padding: 0 10px;
+    }
+    hr {
+       width: 300px; 
+    }
+    #sorting-select,
+    #number-favorites {
+        font-size: 14px;
+    }
+    #sorting-select {
+        width: 155px;
+    }
+    #number-comments {
+        width: 187px;
+        font-size: 20px;
+    }
     .comments-header {
-        display: none;
+        width: 300px;
+        flex-wrap: wrap;
+        gap: 25px;
+    }
+    .block-filling {
+        display: block;
+        width: 300px;
+        margin-bottom: 30px;
+    }
+    #text-comment {
+        width: 300px;
+        height: 50px;
+    }
+    .input-sending {
+        flex-direction: column;
+    }
+    .block-nickname {
+        width: 300px;
+        display: block;
+    }
+    img {
+        width: 50px;
+        height: 50px;
+    }
+    .btn-send {
+        width: 300px;
+        height: 50px;
+    }
+    .counter-block {
+        justify-content: flex-end;
+    }
+    .comment {
+        width: 300px;
+        justify-content: flex-start;
     }
 }
